# bs-solctra

./: .solctra.cpp.swp  CMakeLists.txt  Coil.cpp  Coil.h  FileHandler.cpp  FileHandler.h  GlobalData.cpp  GlobalData.h  Makefile  main.cpp  omp_verbose_parser.pl  particles.txt  setEnv  solctra  solctra.cpp  solctra.h  solctra.optrpt  submit.pbs  submit.sh  submit.sh.knl  utils.cpp  utils.h
Poincare Matlab/: Bobina0mc.txt  Bobina1m.txt  Bobina2mc.txt  Bobina4mc.txt  Bobina5mc.txt  Bobina6mc.txt  Bobina9mc.txt  Path.py  R_vectors.m  Rf.m  Ri.m  SCR_code.m  Superficies.py  cartesian_to_toroidal.m  codigos.m  cut_line.m  e.m  e_roof.m  field_line.m  field_profile.m  load_data.m  load_data_particle.m  load_data_surface.asv  load_data_surface.m  mag_field.m  magnetic_field.m  modifsurface.m  parallel_poincare.asv  parallel_poincare.m  plot_path.m  plot_surface.asv  plot_surface.m  plot_surface2.m  poincare.m  poincare_section.m  rectangular_to_spherical.m  resonance.m  resonancei.m  resonancetest.m  wall_condition.m
Poincare Matlab/RBSSurface/: Surface_1.txt  Surface_10.txt  Surface_11.txt  Surface_12.txt  Surface_13.txt  Surface_14.txt  Surface_15.txt  Surface_16.txt  Surface_17.txt  Surface_18.txt  Surface_19.txt  Surface_2.txt  Surface_20.txt  Surface_21.txt  Surface_22.txt  Surface_23.txt  Surface_24.txt  Surface_25.txt  Surface_26.txt  Surface_27.txt  (+44 more)
resources/: Bobina10mc.txt  Bobina11mc.txt  Bobina1mc.txt  Bobina3mc.txt  Bobina7mc.txt  Bobina8mc.txt  coil0m.2.txt  coil10m.4.txt  coil11m.2.txt  coil1m.2.txt  coil2m.2.txt  coil3m.2.txt  coil4m.2.txt  coil5m.2.txt  coil6m.2.txt  coil7m.2.txt  coil8m.2.txt  coil9m.2.txt  line5.csv  particle1.txt
results/: path5.txt
(+77 files in other folders)
